feat: "Add Customer Menu"